crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__fa102_no_future_import_uses_union_inner.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
no_future_import_uses_union_inner.py:2:13: FA102 (future-required-type-annotation) [*] Missing `from __future__ import annotations`, but uses PEP 585 collection
  |
1 | def main() -> None:
2 |     a_list: list[str | None] = []
  |             ^^^^^^^^^^^^^^^^ FA102 (future-required-type-annotation)
3 |     a_list.append("hello")
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | def main() -> None:
2 3 |     a_list: list[str | None] = []
3 4 |     a_list.append("hello")

no_future_import_uses_union_inner.py:2:18: FA102 (future-required-type-annotation) [*] Missing `from __future__ import annotations`, but uses PEP 604 union
  |
1 | def main() -> None:
2 |     a_list: list[str | None] = []
  |                  ^^^^^^^^^^ FA102 (future-required-type-annotation)
3 |     a_list.append("hello")
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | def main() -> None:
2 3 |     a_list: list[str | None] = []
3 4 |     a_list.append("hello")

no_future_import_uses_union_inner.py:6:14: FA102 (future-required-type-annotation) [*] Missing `from __future__ import annotations`, but uses PEP 585 collection
  |
6 | def hello(y: dict[str | None, int]) -> None:
  |              ^^^^^^^^^^^^^^^^^^^^^ FA102 (future-required-type-annotation)
7 |     z: tuple[str, str | None, str] = tuple(y)
8 |     del z
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | def main() -> None:
2 3 |     a_list: list[str | None] = []
3 4 |     a_list.append("hello")

no_future_import_uses_union_inner.py:6:19: FA102 (future-required-type-annotation) [*] Missing `from __future__ import annotations`, but uses PEP 604 union
  |
6 | def hello(y: dict[str | None, int]) -> None:
  |                   ^^^^^^^^^^ FA102 (future-required-type-annotation)
7 |     z: tuple[str, str | None, str] = tuple(y)
8 |     del z
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | def main() -> None:
2 3 |     a_list: list[str | None] = []
3 4 |     a_list.append("hello")

no_future_import_uses_union_inner.py:7:8: FA102 (future-required-type-annotation) [*] Missing `from __future__ import annotations`, but uses PEP 585 collection
  |
6 | def hello(y: dict[str | None, int]) -> None:
7 |     z: tuple[str, str | None, str] = tuple(y)
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ FA102 (future-required-type-annotation)
8 |     del z
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | def main() -> None:
2 3 |     a_list: list[str | None] = []
3 4 |     a_list.append("hello")

no_future_import_uses_union_inner.py:7:19: FA102 (future-required-type-annotation) [*] Missing `from __future__ import annotations`, but uses PEP 604 union
  |
6 | def hello(y: dict[str | None, int]) -> None:
7 |     z: tuple[str, str | None, str] = tuple(y)
  |                   ^^^^^^^^^^ FA102 (future-required-type-annotation)
8 |     del z
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | def main() -> None:
2 3 |     a_list: list[str | None] = []
3 4 |     a_list.append("hello")
