crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__from_typing_import.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
from_typing_import.py:5:13: FA100 (future-rewritable-type-annotation) Missing `from __future__ import annotations`, but uses `typing.List`
  |
4 | def main() -> None:
5 |     a_list: List[str] = []
  |             ^^^^ FA100 (future-rewritable-type-annotation)
6 |     a_list.append("hello")
  |
