crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__from_typing_import_many.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
from_typing_import_many.py:5:13: FA100 (future-rewritable-type-annotation) Missing `from __future__ import annotations`, but uses `typing.List`
  |
4 | def main() -> None:
5 |     a_list: List[Optional[str]] = []
  |             ^^^^ FA100 (future-rewritable-type-annotation)
6 |     a_list.append("hello")
7 |     a_dict = cast(Dict[int | None, Union[int, Set[bool]]], {})
  |

from_typing_import_many.py:5:18: FA100 (future-rewritable-type-annotation) Missing `from __future__ import annotations`, but uses `typing.Optional`
  |
4 | def main() -> None:
5 |     a_list: List[Optional[str]] = []
  |                  ^^^^^^^^ FA100 (future-rewritable-type-annotation)
6 |     a_list.append("hello")
7 |     a_dict = cast(Dict[int | None, Union[int, Set[bool]]], {})
  |
